
[package]
name = "solana-bpf-race"
version = "0.0.1"
description = "Race program written in Rust"
authors = ["DarleyGo <darleygo@4d.com.hk>"]
repository = "git@github.com:DarleyGo/SolanaProgram.git"
license = "Apache-2.0"
homepage = "https://darleygo.io/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "race"
crate-type = ["cdylib", "lib"]
